# submissions_algorithms

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: check_pr_template.yml  scoring_tests.yml  sync_submission.yml  validate_pr.yml
analysis/: README.md  compute_metrics.py  plot_step_time.py  plot_step_vs_wallclock.py  style.py  submissions.py
analysis/data/: eval_share.csv  leaderboard.csv  raw_measurements.csv  step_time.csv  step_time_overhead_jax.csv  step_time_overhead_pytorch.csv  time_to_target_steps.csv  time_to_targets.csv
configs/: ademamix.json  cautious_nadamw.json  lion.json  muon.json  muon_torch_replicated_jax_hps.json  muon_torch_replicated_torch_hps.json  nadamw.json  nadamw_baselinev05.json  schedule_free_adamw.json  schedule_free_adamw_v2.json  single_worker_diloco.json  single_worker_dilocov2.json
logs/curve_plotting/: README.md  curve_data.csv  parse_logs.py  plot_config.py  plot_curves.py
logs/step_size_analysis/: generate_step_size_table_sfadamw.py
results/: ademamix_summary.csv  cautious_nadamw_summary.csv  lion_summary.csv  muon_summary.csv  muon_torch_jax_hps_lr_fix_summary.csv  muon_torch_replicated_jax_hps_summary.csv  muon_torch_replicated_torch_hps_summary.csv  muon_torch_summary.csv  nadamw_baselinev05_summary.csv  nadamw_resnet_summary.csv  nadamw_summary.csv  performance_profile_score.csv  schedule_free_adamw_jax_summary.csv  schedule_free_adamw_jax_v2_summary.csv  schedule_free_adamw_summary.csv  schedule_free_adamw_v2_summary.csv  scores.csv  single_worker_diloco_summary.csv  single_worker_dilocov2_summary.csv  time_to_targets.csv
scoring/: compute_speedups.py  config.py  performance_profile.py  score_submissions.py  scoring_utils.py  test_score_submissions.py  test_scoring_utils.py  workload_targets.json  workload_targets_v05.json
scoring/algoperf_v05/: score_submissions.py
(+2971 files in other folders)
