###############################################################################
#              MLCommons AlgoPerf: Leaderboard Scoring Tooling                 #
###############################################################################
# This package contains the scoring code used to compute the AlgoPerf
# leaderboard (performance profiles, time-to-target, benchmark scores and
# speedups) from submission logs stored in this repository.
#
# It was moved here from the `scoring/` directory of
# https://github.com/mlcommons/algorithmic-efficiency so that the repository
# that owns the leaderboard also owns the code that produces it.

[project]
name = "algoperf-submissions"
version = "0.6.0"
description = "Scoring tooling for the MLCommons AlgoPerf: Training Algorithms leaderboard"
authors = [
  { name = "MLCommons Algorithms Working Group", email = "algorithms@mlcommons.org" },
]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.11"


dependencies = [
  "absl-py==2.1.0",
  "numpy==2.1.3",
  "pandas==2.2.3",
  "matplotlib==3.9.2",
  "scipy==1.14.1",
  "tabulate==0.9.0",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3", "ruff==0.12.0"]

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Only package the scoring code; ignore submissions/ and previous_leaderboards/.
include = ["scoring*"]

###############################################################################
#                     Linting & Formatting Configurations                     #
###############################################################################
[tool.ruff]
line-length = 80
indent-width = 2
target-version = "py311"

[tool.ruff.format]
quote-style = "single"
